argocd/applications/infrastructure/argo-workflows/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.st0rmingbr4in.com`)
      middlewares:
        - name: authentik
          namespace: prod-infra
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: st0rmingbr4in.com-cert
